--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,5 +1,5 @@
 %h1 if you want to confess do it here!
 - @posts.each do |post|
-	%h2= post.title
+	%h2= post.title= link_to post.title, post
 
 = link_to "confess here", new_post_path
