--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,6 +1,13 @@
 %h1 here is a confession
 %h2= @post.title
 %p= @post.content
+	
+#commnets
+	%h2 Here are the comments to this confession
+	= render @post.comments
 
+	%h3 Say what u want to this confession
+	= render "comments/form"
+= link_to "the home page", root_path
 = link_to "EDIT your confession", edit_post_path(@post)
 = link_to "let it GO", post_path(@post), method: :delete
