--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for @post do |formme|
-	=formme.input :title
-	=formme.input :content
-	=formme.submit
+= simple_form_for @post do |form|
+	=form.input :title
+	=form.input :content
+	=form.submit
