--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,4 +1,5 @@
-%h1 if you want to confess do it here!
+%h1 Confessions Center
+
 - @posts.each do |post|
 	%h2= post.title= link_to post.title, post
 	%p
