Posts and comments hide edit / delete if original user not logged in 📚

--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -2,11 +2,13 @@
 %h2= @post.title
 %p= @post.content
 
+- if current_user && current_user.email == @post.user.email
+	=link_to "Edit", edit_post_path(@post)
+	=link_to "Let It Go?", post_path(@post), method: :delete
+
 #comments
 	%h2 Comments:
-	= render @post.comments
+	=render @post.comments
 
 	%h3 New Comment
-	= render "comments/form"
-= link_to "Edit", edit_post_path(@post)
-= link_to "Let It Go?", post_path(@post), method: :delete
+	=render "comments/form"
