--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -3,4 +3,5 @@
 		= comment.user.email
 		says:
 	= comment.comment
-= link_to "Delete", [comment.post, comment], method: :delete
+- if current_user && current_user.email == comment.user.email
+	= link_to "Delete", [comment.post, comment], method: :delete
